# sl-5-6-osi-trace-file-writer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: add_to_project.yml  build.yml  cl1.yml  cpp-linter.yml  markdown.yml  spdx.yml  test_pipeline.yml
src/: CMakeLists.txt  OSMP.cpp  OSMP.h  TraceFileWriter.cpp  TraceFileWriter.h  modelDescription.in.xml
